# ledmusicrework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cppstyle.xml
example/: CMakeLists.txt
example/src/: audio_loop_usage.cpp  basic_audio_and_serial_loop.cpp  bass_adapter_usage.cpp  color_decoding_usage.cpp  devices_front_usage.cpp  devlist.cpp  get_device_and_capture.cpp  get_sample_data.cpp  pulse_list_devices.cpp  serial_hello_world.cpp  spectrum.cpp
front/: CMakeLists.txt
front/animation/: animation.cpp  animation.h  animation.ui  animation_view.cpp  animation_view.ui  animationpresettings.cpp  animationpresettings.h  animationpresettings.ui
front/animation_preview/: CMakeLists.txt  animation_view.h
front/animation_settings/: CMakeLists.txt
front/animation_settings/src/: animation_settings.cpp  animation_settings.h  animation_settings.ui  polygon_preview.cpp  polygon_preview.h  polygon_preview.ui
front/animation_view/: CMakeLists.txt
front/animation_view/src/: animation_view.cpp  animation_view.h  animation_view.ui
front/audio_loop_interface/: CMakeLists.txt
front/audio_loop_interface/include/: main_window.h
front/audio_loop_interface/src/: audio_loop_interface.cpp  audio_loop_interface.h  main_window.cpp  main_window.ui
front/color/include/: color.h
front/color/src/: color.cpp  color.ui
front/color_settings/: CMakeLists.txt
front/color_settings/src/: color_settings.cpp  color_settings.h  color_settings.ui
front/devices/: CMakeLists.txt
front/devices/src/: devices.cpp  devices.h  devices.ui
front/main_window/: CMakeLists.txt
front/main_window/src/: main_window.cpp  main_window.h  main_window.ui
front/presets/: CMakeLists.txt  presets.cpp  presets.h  presets.ui  savenewdial.cpp  savenewdial.h  savenewdial.ui
front/presets/src/: new_preset_dialog.cpp  new_preset_dialog.h  new_preset_dialog.ui  presets.cpp  presets.h  presets.ui  savenewdial.cpp  savenewdial.h  savenewdial.ui
front/serial_port_interface/: CMakeLists.txt
front/serial_port_interface/src/: serial_port_interface.cpp  serial_port_interface.h
lib/: CMakeLists.txt
lib/audio_tf_loop/: CMakeLists.txt
lib/audio_tf_loop/include/: audio_tf_loop.h  container.h
lib/audio_tf_loop/src/: audio_tf_loop.cpp  container.cpp
lib/base_exception/: CMakeLists.txt
lib/base_exception/include/: base_exception.h
lib/base_exception/src/: base_exception.cpp
lib/bass_adapter/: CMakeLists.txt
lib/bass_adapter/include/: bass.h  bass_adapter.h  bass_device.h  bass_exception.h  bass_stream.h  fft_stream.h
lib/bass_adapter/src/: bass_adapter.cpp  bass_device.cpp  bass_exception.cpp  bass_stream.cpp  fft_stream.cpp
lib/color_processor/: CMakeLists.txt
lib/color_processor/include/: color_processor.h  rgb.h
lib/color_processor/src/: color_processor.cpp
lib/colors/: CMakeLists.txt
lib/colors/include/: color.h  color_settings.h  rgb.h
lib/colors/src/: color.cpp  color_settings.cpp
lib/file_descriptor/: CMakeLists.txt
lib/file_descriptor/include/: file_descriptor.h
lib/file_descriptor/src/: file_descriptor.cpp
lib/fixed_queue/: CMakeLists.txt
lib/fixed_queue/include/: fixed_queue.h
lib/geometry/: CMakeLists.txt
lib/geometry/include/: circle.h  point.h  polygon.h  rgb.h
lib/geometry/src/: circle.cpp  polygon.cpp
lib/job_thread/: CMakeLists.txt
lib/job_thread/include/: job_thread.h
lib/job_thread/src/: job_thread.cpp
lib/ledplayer_exception/: CMakeLists.txt
lib/ledplayer_exception/include/: ledplayer_exception.h
lib/ledplayer_exception/src/: ledplayer_exception.cpp
lib/pulse_adapter/: CMakeLists.txt
lib/pulse_adapter/include/: capture.h  capture_stream.h  list_devices.h
lib/pulse_adapter/src/: capture.cpp  capture_stream.cpp  list_devices.cpp
lib/pulse_capture/: CMakeLists.txt
lib/pulse_capture/include/: capture.h  list_devices.h
lib/pulse_capture/src/: capture.cpp  list_devices.cpp
lib/sample/: CMakeLists.txt
lib/serial/: CMakeLists.txt
lib/serial/include/: serial.h  serial_thread.h
lib/serial/src/: serial.cpp  serial_thread.cpp
lib/serial_loop/: CMakeLists.txt
lib/serial_loop/include/: serial_loop.h
lib/serial_loop/src/: serial_loop.cpp
project/: CMakeLists.txt
project/src/: main.cpp
