add_executable(pulse_list src/pulse_list_devices.cpp)
target_link_libraries(pulse_list pulse_adapter)

add_executable(get_device_and_capture src/get_device_and_capture.cpp)
target_link_libraries(get_device_and_capture pulse_adapter)

add_executable(get_sample_data src/get_sample_data.cpp)
target_link_libraries(get_sample_data bass_adapter pulse_adapter)

add_executable(color_decoding_usage src/color_decoding_usage.cpp)
target_link_libraries(color_decoding_usage colors bass_adapter pulse_adapter)

add_executable(audio_loop_usage src/audio_loop_usage.cpp)
target_link_libraries(audio_loop_usage audio_tf_loop)
