find_package(Threads)

add_subdirectory(ledplayer_exception)
add_subdirectory(bass_adapter)
add_subdirectory(color_processor)
add_subdirectory(job_thread)
add_subdirectory(audio_tf_loop)
add_subdirectory(file_descriptor)
add_subdirectory(serial)
add_subdirectory(geometry)
add_subdirectory(serial_loop)
add_subdirectory(fixed_queue)
