#find_package(Qt5 COMPONENTS Widgets Core Gui SerialPort REQUIRED)
#
#target_link_libraries(player_ui
#        player
#        Qt5::Widgets
#        Qt5::Core
#        Qt5::Gui
#        Qt5::SerialPort
#        )
#add_library(lib_name STATIC
#        src/lib_name.cpp
#        )
#target_include_directories(lib_name PUBLIC include)
#target_link_libraries(lib_name PUBLIC colors bass_exception base_exceptionpulse_adapter)
